<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>lloyd_simple</name>
<version>0.0.0</version>
<description>my first ROS2 integrated lloyd algorithm</description>
<maintainer email="josina.gerdes@tuhh.de">Josina Gerdes</maintainer>
<!--  One license tag required, multiple allowed, one license per tag  -->
<!--  Commonly used license strings:  -->
<!--    BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3  -->
<license>GPLv2</license>
<url type="website">hippocampusrobotics.github.io/docs</url>
<author email="josina.gerdes@tuhh.de">Josina Gerdes</author>
<buildtool_depend>ament_cmake</buildtool_depend>
<buildtool_depend>ament_cmake_python</buildtool_depend>
<depend>rclpy</depend>
<depend>geometry_msgs</depend>
<depend>std_msgs</depend>
<depend>visualization_msgs</depend>
<exec_depend>python3-numpy</exec_depend>
<exec_depend>python3-matplotlib</exec_depend>
<!--  The export tag contains other, unspecified, tags  -->
<export>
<build_type>ament_cmake</build_type>
</export>
</package>